// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormCard Component Should call function with updated array as parameter when button is clicked 1`] = `
<div>
  <div
    class="rounded"
    style="text-align: center; padding: 10px; background-color: white;"
  >
    <div
      class="d-flex flex-column"
      style="padding: 10px; text-align: left; margin-bottom: 0px;"
    >
      <h5
        data-testid="h5fireStarter0"
      >
        FireStarter
      </h5>
      <div
        style="background-color: white;"
      >
        <button
          class="btn"
          style="color: rgb(41, 41, 41);"
        >
          Write
        </button>
        <button
          class="btn"
          style="color: rgb(142, 142, 142);"
        >
          Preview
        </button>
        <textarea
          data-testid="textbox"
          placeholder="Type something..."
          style="padding: 1rem; width: 100%;"
        />
      </div>
    </div>
    <div
      style="margin: 10px;"
    >
      <button
        class="btn bg-success"
        style="color: rgb(41, 41, 41);"
      >
        Create New Challenge
      </button>
    </div>
  </div>
</div>
`;

exports[`FormCard Component Should output empty title when title is empty 1`] = `
<div>
  <div
    class="rounded"
    style="text-align: center; padding: 10px; background-color: white;"
  >
    <div
      class="d-flex flex-column"
      style="padding: 10px; text-align: left; margin-bottom: 0px;"
    >
      <h5
        data-testid="h50"
      />
      <input
        data-testid="input0"
        placeholder=""
        type="text"
        value=""
      />
    </div>
    <div
      style="margin: 10px;"
    >
      <button
        class="btn bg-success"
        style="color: rgb(41, 41, 41);"
      >
        Create New Challenge
      </button>
    </div>
  </div>
</div>
`;

exports[`FormCard Component Should render MdInput component when type is MD_INPUT 1`] = `
<div>
  <div
    class="rounded"
    style="text-align: center; padding: 10px; background-color: white;"
  >
    <div
      class="d-flex flex-column"
      style="padding: 10px; text-align: left; margin-bottom: 0px;"
    >
      <h5
        data-testid="h5fireStarter0"
      >
        FireStarter
      </h5>
      <div
        style="background-color: white;"
      >
        <button
          class="btn"
          style="color: rgb(41, 41, 41);"
        >
          Write
        </button>
        <button
          class="btn"
          style="color: rgb(142, 142, 142);"
        >
          Preview
        </button>
        <textarea
          data-testid="textbox"
          placeholder="Type something..."
          style="padding: 1rem; width: 100%;"
        >
          Javascript
        </textarea>
      </div>
    </div>
    <div
      style="margin: 10px;"
    >
      <button
        class="btn bg-success"
        style="color: rgb(41, 41, 41);"
      >
        Create New Challenge
      </button>
    </div>
  </div>
</div>
`;

exports[`FormCard Component Should render nothing if id is a title 1`] = `
<div>
  <div
    class="rounded"
    style="text-align: center; padding: 10px; background-color: white;"
  >
    <div
      style="margin: 10px;"
    >
      <button
        class="btn bg-success"
        style="color: rgb(41, 41, 41);"
      >
        Create New Challenge
      </button>
    </div>
  </div>
</div>
`;

exports[`FormCard Component Should update testing onChange variable when person types 1`] = `
<div>
  <div
    class="rounded"
    style="text-align: center; padding: 10px; background-color: white;"
  >
    <div
      class="d-flex flex-column"
      style="padding: 10px; text-align: left; margin-bottom: 0px;"
    >
      <h5
        data-testid="h5fireStarter0"
      >
        FireStarter
      </h5>
      <input
        data-testid="input0"
        placeholder=""
        type="text"
        value=""
      />
    </div>
    <div
      style="margin: 10px;"
    >
      <button
        class="btn bg-success"
        style="color: rgb(41, 41, 41);"
      >
        Create New Challenge
      </button>
    </div>
  </div>
</div>
`;

exports[`FormCard Component Should update testing onChange variable when person types MdInput 1`] = `
<div>
  <div
    class="rounded"
    style="text-align: center; padding: 10px; background-color: white;"
  >
    <div
      class="d-flex flex-column"
      style="padding: 10px; text-align: left; margin-bottom: 0px;"
    >
      <h5
        data-testid="h5fireStarter0"
      >
        FireStarter
      </h5>
      <div
        style="background-color: white;"
      >
        <button
          class="btn"
          style="color: rgb(41, 41, 41);"
        >
          Write
        </button>
        <button
          class="btn"
          style="color: rgb(142, 142, 142);"
        >
          Preview
        </button>
        <textarea
          data-testid="textbox"
          placeholder="Type something..."
          style="padding: 1rem; width: 100%;"
        >
          Javascript
        </textarea>
      </div>
    </div>
    <div
      style="margin: 10px;"
    >
      <button
        class="btn bg-success"
        style="color: rgb(41, 41, 41);"
      >
        Create New Challenge
      </button>
    </div>
  </div>
</div>
`;
